testdata/bad/intWithLeadingZeros.ion
// Numbers can have only one leading zero.
[ 007 ]
